[gd_scene load_steps=12 format=2]

[ext_resource path="res://Hitboxes and Hurtboxes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/HitBox.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 11.0

[sub_resource type="CircleShape2D" id=4]
radius = 14.1421

[sub_resource type="CircleShape2D" id=2]
radius = 23.0217

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.764706, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.172549, 0.152941, 0.152941, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 4 )

[node name="Debug" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 3 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 4 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 2 )

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
margin_left = -24.0
margin_top = -15.0
margin_right = 22.0
margin_bottom = -10.0
theme = SubResource( 5 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
percent_visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="HitBox"]
[editable path="SoftCollision"]
